@@ -1,3 +1,8 @@
+2010-02-05  Rik  <octave@nomad.inbox5.com>
+
+	* help/help.m, linear-algebra/onenormest.m, plot/graphics_toolkit.m,
+	plot/pie3.m, plot/view.m, signal/periodogram.m: Grammarcheck docstrings.
+
 2010-02-02  Rik  <octave@nomad.inbox5.com>
 
 	* sparse/svds.m: Use testif to only run some sparse tests when
